--- a/Discord Theme/jAba.css
+++ b/Discord Theme/jAba.css
@@ -1029,6 +1029,11 @@ article.embedWrapper_b558d0.embedFlexGrow_b558d0.embedFull_b0068a.embed_b0068a.m
     background-color: rgba(255, 255, 255, 0.05) !important;
 }
 
+/* Фикс чата в обновлении от 26.10.2024 */
+.themedBackground_bdf0de {
+    background: none;
+}
+
 @keyframes ani-rotate {
     0% {
         transform: rotate(0);
