--- a/Discord Theme/jAba.css
+++ b/Discord Theme/jAba.css
@@ -6,10 +6,150 @@
 @import url("https://eject37.github.io/DiscordTheme/ChangeSearchBarToIcon.css");
 @import url("https://eject37.github.io/DiscordTheme/RegionFlags.css");
 
+/* .sidebar_c25c6d .item_a0::before {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    left: 7px;
+    content: "";
+    background-size: contain;
+    scale: 1.1;
+}
+
+.theme-dark .sidebar_c25c6d .item_a0::before {
+    filter: invert();
+}
+
+.sidebar_c25c6d .item_a0 {
+    padding-left: 35px;
+}
+
+.side_a0:has(> .socialLinks_c44e94) > .item_a0:nth-of-type(3)::before {
+    background-image: url("https://feorev.github.io/Themes/Discord/assets/SettingsIcons/MyAccount.svg");
+}
+
+.side_a0:has(> .socialLinks_c44e94) > .item_a0:nth-of-type(4)::before {
+    background-image: url("https://feorev.github.io/Themes/Discord/assets/SettingsIcons/Profiles.svg");
+}
+
+.side_a0:has(> .socialLinks_c44e94) > .item_a0:nth-of-type(5)::before {
+    background-image: url("https://feorev.github.io/Themes/Discord/assets/SettingsIcons/Privacy&Safety.svg");
+}
+
+.side_a0:has(> .socialLinks_c44e94) > .item_a0:nth-of-type(6)::before {
+    background-image: url("https://feorev.github.io/Themes/Discord/assets/SettingsIcons/FamilyCenter.svg");
+}
+
+.side_a0:has(> .socialLinks_c44e94) > .item_a0:nth-of-type(7)::before {
+    background-image: url("https://feorev.github.io/Themes/Discord/assets/SettingsIcons/AuthorizedApps.svg");
+}
+
+.side_a0:has(> .socialLinks_c44e94) > .item_a0:nth-of-type(8)::before {
+    background-image: url("https://feorev.github.io/Themes/Discord/assets/SettingsIcons/Devices.svg");
+}
+
+.side_a0:has(> .socialLinks_c44e94) > .item_a0:nth-of-type(9)::before {
+    background-image: url("https://feorev.github.io/Themes/Discord/assets/SettingsIcons/Connections.svg");
+}
+
+.side_a0:has(> .socialLinks_c44e94) > .item_a0:nth-of-type(10)::before {
+    background-image: url("https://feorev.github.io/Themes/Discord/assets/SettingsIcons/Clips.svg");
+}
+
+.side_a0:has(> .socialLinks_c44e94) > .item_a0:nth-of-type(11)::before {
+    background-image: url("https://feorev.github.io/Themes/Discord/assets/SettingsIcons/FriendRequests.svg");
+}
+
+.side_a0:has(> .socialLinks_c44e94) > .item_a0:nth-of-type(14)::before {
+    background-image: url("https://feorev.github.io/Themes/Discord/assets/SettingsIcons/Nitro.svg");
+    height: 14px !important;
+    display: var(--nitro);
+}
+
+.side_a0:has(> .socialLinks_c44e94) > .item_a0:nth-of-type(15)::before {
+    background-image: url("https://feorev.github.io/Themes/Discord/assets/SettingsIcons/ServerBoost.svg");
+    display: var(--nitro);
+}
+
+.side_a0:has(> .socialLinks_c44e94) > .item_a0:nth-of-type(16)::before {
+    background-image: url("https://feorev.github.io/Themes/Discord/assets/SettingsIcons/Subscriptions.svg");
+    display: var(--nitro);
+}
+
+.side_a0:has(> .socialLinks_c44e94) > .item_a0:nth-of-type(17)::before {
+    background-image: url("https://feorev.github.io/Themes/Discord/assets/SettingsIcons/GiftInventory.svg");
+    display: var(--nitro);
+}
+
+.side_a0:has(> .socialLinks_c44e94) > .item_a0:nth-of-type(18)::before {
+    background-image: url("https://feorev.github.io/Themes/Discord/assets/SettingsIcons/GovernmentOrder.svg");
+    display: var(--nitro);
+}
+
+.side_a0:has(> .socialLinks_c44e94) > .item_a0:nth-of-type(21)::before {
+    background-image: url("https://feorev.github.io/Themes/Discord/assets/SettingsIcons/Appearance.svg");
+}
+
+.side_a0:has(> .socialLinks_c44e94) > .item_a0:nth-of-type(22)::before {
+    background-image: url("https://feorev.github.io/Themes/Discord/assets/SettingsIcons/Accessibility.svg");
+}
+
+.side_a0:has(> .socialLinks_c44e94) > .item_a0:nth-of-type(23)::before {
+    background-image: url("https://feorev.github.io/Themes/Discord/assets/SettingsIcons/Voice&Video.svg");
+}
+
+.side_a0:has(> .socialLinks_c44e94) > .item_a0:nth-of-type(24)::before {
+    background-image: url("https://feorev.github.io/Themes/Discord/assets/SettingsIcons/Text&Images.svg");
+}
+
+.side_a0:has(> .socialLinks_c44e94) > .item_a0:nth-of-type(25)::before {
+    background-image: url("https://feorev.github.io/Themes/Discord/assets/SettingsIcons/Notifications.svg");
+}
+
+.side_a0:has(> .socialLinks_c44e94) > .item_a0:nth-of-type(26)::before {
+    background-image: url("https://feorev.github.io/Themes/Discord/assets/SettingsIcons/Keybinds.svg");
+}
+
+.side_a0:has(> .socialLinks_c44e94) > .item_a0:nth-of-type(27)::before {
+    background-image: url("https://feorev.github.io/Themes/Discord/assets/SettingsIcons/Language.svg");
+}
+
+.side_a0:has(> .socialLinks_c44e94) > .item_a0:nth-of-type(28)::before {
+    background-image: url("https://feorev.github.io/Themes/Discord/assets/SettingsIcons/WindowsSettings.svg");
+}
+
+.side_a0:has(> .socialLinks_c44e94) > .item_a0:nth-of-type(29)::before {
+    background-image: url("https://feorev.github.io/Themes/Discord/assets/SettingsIcons/StreamerMode.svg");
+}
+
+.side_a0:has(> .socialLinks_c44e94) > .item_a0:nth-of-type(30)::before {
+    background-image: url("https://feorev.github.io/Themes/Discord/assets/SettingsIcons/Advanced.svg");
+}
+
+.side_a0:has(> .socialLinks_c44e94) > .item_a0:nth-of-type(33)::before {
+    background-image: url("https://feorev.github.io/Themes/Discord/assets/SettingsIcons/ActivityPrivacy.svg");
+}
+
+.side_a0:has(> .socialLinks_c44e94) > .item_a0:nth-of-type(34)::before {
+    background-image: url("https://feorev.github.io/Themes/Discord/assets/SettingsIcons/RegistredGames.svg");
+}
+
+.side_a0:has(> .socialLinks_c44e94) > .item_a0:nth-of-type(35)::before {
+    background-image: url("https://feorev.github.io/Themes/Discord/assets/SettingsIcons/GameOverlay.svg");
+}
+
+.side_a0:has(> .socialLinks_c44e94) > .bd-settings-tab::before {
+    background-image: url("https://feorev.github.io/Themes/Discord/assets/SettingsIcons/Settings.svg");
+}
+
+.side_a0:has(> .socialLinks_c44e94) > .bd-updates-tab::before {
+    background-image: url("https://feorev.github.io/Themes/Discord/assets/SettingsIcons/Updates.svg");
+} */
+
 :root {
-    --app-bg: url(https://i.giphy.com/PLJeLzh6gfL2LhUIW0.webp);
+    --app-bg: url(https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExcTAwd3FkaHY1NGUxNjY3cTJtNDRoNzI1eGg3c2g2ZmdsaXdwdDBuMCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/cjojgtiigyloyCg3r9/giphy.webp);
     --blur-bg: 80px;
-    --brightness-bg: 0.35;
+    --brightness-bg: 0.3;
     --border-main: 1px solid rgba(255, 255, 255, 0.1);
 }
 
@@ -577,7 +717,18 @@ button[class*="lookFilled_dd4f85"]:hover {
 .messagesPopoutWrap_ac90a2 {
     margin-top: -15px; /* Фикс для margin области разговора (демки) что бы дискорд не прыгал */
 }
+/* чат */
+.themedBackground_bdf0de {
+    background-color: rgba(100, 100, 100, 0.1) !important;
+}
 
+.uploadDropModal_f82cc7 .bgScale_f82cc7 {
+    background-color: rgba(100, 100, 100, 0.3) !important;
+    backdrop-filter: blur(10px);
+}
+.uploadDropModal_f82cc7 .inner_f82cc7 .instructions_f82cc7 {
+    display: none !important;
+}
 /* Открытый поиск в диалоге (когда уже просматриваешь найденные сообщения) */
 .searchResultsWrap_c2b47d {
     background-color: rgba(100, 100, 100, 0.2) !important;
@@ -933,12 +1084,13 @@ button[class*="lookFilled_dd4f85"]:hover {
 .giftCardButton_d8f41e:hover {
     background-color: rgba(100, 100, 100, 0.4) !important;
 }
-
+/* линия прокрутки */
 .bar_c7a159,
 .markDash_c7a159 {
     background: rgba(67, 67, 67, 0.52) !important;
 }
 
+/* линия прокрутки */
 article.embedWrapper_b558d0.embedFlexGrow_b558d0.embedFull_b0068a.embed_b0068a.markup_f8f345 {
     border-color: rgba(200, 200, 200, 0.35) !important;
 }
@@ -1029,9 +1181,8 @@ article.embedWrapper_b558d0.embedFlexGrow_b558d0.embedFull_b0068a.embed_b0068a.m
     background-color: rgba(255, 255, 255, 0.05) !important;
 }
 
-/* Фикс чата в обновлении от 26.10.2024 */
-.themedBackground_bdf0de {
-    background: none;
+.vc-settings-quickActions-pill:hover {
+    background-color: rgba(255, 255, 255, 0.1) !important;
 }
 
 @keyframes ani-rotate {
