--- a/Discord Theme/jAba.css
+++ b/Discord Theme/jAba.css
@@ -1058,6 +1058,11 @@ article.embedWrapper_b558d0.embedFlexGrow_b558d0.embedFull_b0068a.embed_b0068a.m
     background-color: rgba(255, 255, 255, 0.1) !important;
 }
 
+/* Скрываем снизу слева помойку от 16.11.2024 */
+.footer_f8ec41 {
+    display: none;
+}
+
 @keyframes ani-rotate {
     0% {
         transform: rotate(0);
