--- a/Discord Theme/jAba.css
+++ b/Discord Theme/jAba.css
@@ -116,7 +116,7 @@ body {
 .panels_a4d4d9,
 .privateChannels_f0963d,
 .scroller_c47fa9,
-.themedBackground_d0696b,
+.themedBackground_bdf0de,
 .themed_fc4f04,
 .bg_d4b6c5,
 #app-mount,
@@ -137,7 +137,7 @@ body {
 .nowPlayingColumn_c2739c,
 .container_bf550a,
 .inset_ac5d22,
-.attachedBars_d0696b,
+.stackedBars_bdf0de,
 .background_b69b77,
 .fieldList_b69b77,
 .premiumBackground_c6d722,
@@ -175,8 +175,8 @@ body {
 .ready_e40c16, /* нахуй оно надо (моя учетная запись)*/ 
 .content_a7d72e:before,/* черная полосаааа*/
 .container_da1432, /*реклама*/
-.footerImage_fab929,.tipTitle_e40c16,.buttonContainer_df39bd,.statusBubbleOuter_d0a252::after,
-.statusBubbleOuter_d0a252::before {
+.footerImage_fab929,.tipTitle_e40c16,.buttonContainer_df39bd,.statusBubbleOuter_af9888::after,
+.statusBubbleOuter_af9888::before {
     display: none !important;
 }
 
@@ -320,7 +320,7 @@ body {
 }
 
 /* Загружаемые файлы и разные фоны в сообщениях */
-.attachment_b52bef.newMosaicStyle_b52bef,
+.fileWrapper_f46c86.newMosaicStyle_b52bef,
 .newMosaicStyle_d8e2d0 .codeView_d8e2d0,
 .newMosaicStyle_d8e2d0 .footer_d8e2d0,
 .newMosaicStyle_d8e2d0 .textContainer_d8e2d0,
@@ -640,7 +640,7 @@ button[class*="lookFilled_dd4f85"]:hover {
 }
 
 /* ссылки при клике которые не обычные ссылки */
-.fileNameLink_b52bef,
+.fileNameLink_f46c86,
 .link_f0135d,
 .lookLink_dd4f85 {
     background: linear-gradient(90deg, rgb(255, 84, 132), rgb(137, 90, 255));
@@ -673,7 +673,7 @@ button[class*="lookFilled_dd4f85"]:hover {
 }
 
 /* идет загрузка файла */
-.attachment_b52bef {
+.fileWrapper_f46c86 {
     background-color: rgba(100, 100, 100, 0.1) !important;
 }
 /* вставка файла в чат */
@@ -1013,7 +1013,7 @@ article.embedWrapper_b558d0.embedFlexGrow_b558d0.embedFull_b0068a.embed_b0068a.m
 }
 
 /* добавить статус */
-.statusBubbleShape_d0a252 {
+.statusBubbleShape_af9888 {
     background-color: rgba(255, 255, 255, 0.05);
 }
 
@@ -1045,7 +1045,7 @@ article.embedWrapper_b558d0.embedFlexGrow_b558d0.embedFull_b0068a.embed_b0068a.m
     fill: rgba(202, 90, 99, 0.9) !important;
 }
 
-.statusBubbleSingleLineWithTextShape_d0a252 {
+.statusBubbleSingleLineWithTextShape_af9888 {
     background-color: rgba(255, 255, 255, 0.05) !important;
 }
 
@@ -1059,11 +1059,36 @@ article.embedWrapper_b558d0.embedFlexGrow_b558d0.embedFull_b0068a.embed_b0068a.m
 }
 
 /* Скрываем снизу слева помойку от 16.11.2024 */
-.footer_f8ec41,
+.footer_d71945,
 .footer_d71945 {
     display: none !important;
 }
 
+.inner_c69a7b.biteSize_c69a7b {
+    background-color: rgba(146, 146, 146, 0.1);
+    backdrop-filter: blur(15px);
+}
+
+.statusBubbleWithTextPadding_af9888 {
+    background-color: rgba(146, 146, 146, 0.15) !important;
+}
+.scroller_d53d65 {
+    width: 110%;
+}
+
+.header_a3bc57 {
+    background-color: rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(30px);
+}
+
+.inner_c69a7b.fullSize_c69a7b {
+    background: none;
+}
+
+.accountProfilePopoutWrapper_b2ca13 {
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 10px;
+}
 @keyframes ani-rotate {
     0% {
         transform: rotate(0);
