--- a/Discord Theme/jAba.css
+++ b/Discord Theme/jAba.css
@@ -23,7 +23,7 @@ body{
     backdrop-filter: blur(var(--blur-bg)) brightness(var(--brightness-bg));
 }
 
-.visual-refresh.theme-darker{
+.visual-refresh .theme-darker, .visual-refresh.theme-darker{
 --background-base-lowest: transparent;
 --bg-base-tertiary: transparent;
 --background-tertiary: transparent;
