--- a/Discord Theme/jAba.css
+++ b/Discord Theme/jAba.css
@@ -226,13 +226,20 @@ border: none;
 
 .disconnect_f1ceac {
     background: radial-gradient(90.42% 100% at 50% 100%, rgba(19, 18, 18, 0.5) 60%, transparent 100%), linear-gradient(270deg, rgba(192, 55, 84, 0.5) 0, rgba(192, 55, 84, 0.5) 100%) !important;
-}/* ПАНЕЛЬ УПРАВЛЕНИЯ В  ГОЛОСОВ КАНАЛЕ */
+}
+
+.buttonSection__1405b,.disconnect_f1ceac{
+    border: none;
+}
+/* ПАНЕЛЬ УПРАВЛЕНИЯ В  ГОЛОСОВ КАНАЛЕ */
+
 /* СМЕНА РЕГИОНА */
 .quickSelectPopout_ebaca5{
     background: rgba(255, 255, 255, 0.15) !important;
     backdrop-filter: blur(10px)
 }
 /* СМЕНА РЕГИОНА */
+
 /* MESSAGEBOX */
 .root__49fc1{
     background: rgba(255, 255, 255, 0.15);
@@ -243,3 +250,19 @@ border: none;
     background: transparent;
 }
 /* MESSAGEBOX */
+
+/* НАЖАТЫЕ КНОПКИ */
+:where(.visual-refresh) .checkbox_f525d3.checked_f525d3{
+    background: radial-gradient(90.42% 100% at 50% 100%, rgba(226, 135, 135, 0.5) 60%, transparent 100%), linear-gradient(270deg, rgba(31, 17, 119, 0.5) 0, rgba(130, 110, 238, 0.5) 100%) !important;
+    border: none;
+}
+/* НАЖАТЫЕ КНОПКИ */
+
+/* ПРОГРЕСС БАР ЗВУК  */
+.barFill_a562c8{
+    background: radial-gradient(ellipse farthest-corner at right bottom, #fedb37 0%, #FDB931 8%, #9f7928 30%, #8a6e2f 40%, transparent 80%),
+		radial-gradient(ellipse farthest-corner at left top, #ffffff 0%, #ffffac 8%, #d1b464 25%, #5d4a1f 62.5%, #5d4a1f 100%);;
+    border: none;
+    background-color: transparent !important;
+}
+/* ПРОГРЕСС БАР ЗВУК  */
