--- a/Discord Theme/jAba.css
+++ b/Discord Theme/jAba.css
@@ -301,3 +301,7 @@ border: none;
     background: rgba(0, 0, 0, 0.3);
     border-bottom: var(--border-main) !important;
 }
+
+.wrapper_cb9592.minimum_cb9592{
+    background: transparent !important;
+}
